--- a/snippets/wishlist-icon.liquid
+++ b/snippets/wishlist-icon.liquid
@@ -5,7 +5,7 @@
   {% render 'wishlist-icon' %}
 {% endcomment %}
 
-<a href="{{ routes.root_url }}pages/wishlist" class="icon-link" aria-label="{{ 'wishlist.view_wishlist' | t }}">
+<a href="/pages/wishlist" class="icon-link" aria-label="{{ 'wishlist.view_wishlist' | t }}">
   <div class="icon-wrapper">
     <i class="fas fa-heart"></i>
     <span class="cart-count wishlist-count" data-wishlist-count>0</span>
