--- a/sections/wishlist.liquid
+++ b/sections/wishlist.liquid
@@ -1,12 +1,12 @@
 {% comment %}
-  Wishlist page template for CozyWhimsy theme
-  Displays all items saved to the wishlist
+  Wishlist section for CozyWhimsy theme
+  This section can be included on any page to display the wishlist
 {% endcomment %}
 
 <div class="wishlist-page">
   <div class="container">
     <div class="wishlist-header">
-      <h1 class="wishlist-title">{{ page.title }}</h1>
+      <h1 class="wishlist-title">My Wishlist</h1>
       
       <div class="wishlist-actions">
         <button type="button" class="button button-primary" data-wishlist-add-all>
@@ -502,3 +502,16 @@
     }
   });
 </script>
+
+{% schema %}
+{
+  "name": "Wishlist",
+  "settings": [],
+  "presets": [
+    {
+      "name": "Wishlist",
+      "category": "Custom Content"
+    }
+  ]
+}
+{% endschema %}
